# Azula-OS

./: .gitignore  .gitmodules  README.md  virt.dtb
.github/workflows/: build-and-test.yml
apps/AzulaOS/: AzulaOS.camkes  CMakeLists.txt
camkes-components/AzulaInit/: AzulaInit.camkes  CMakeLists.txt
camkes-components/AzulaInit/src/: init.c
camkes-components/AzulaOS/: AzulaOS.camkes  CMakeLists.txt
camkes-components/BusyBox/: BusyBox.camkes  CMakeLists.txt
camkes-components/BusyBox/src/: busybox.c
camkes-components/HelloWorld/: CMakeLists.txt  HelloWorld.camkes
camkes-components/HelloWorld/src/: hello.c
camkes-components/drivers/Framebuffer/: CMakeLists.txt  Framebuffer.camkes
camkes-components/drivers/Framebuffer/src/: fb.c
camkes-components/drivers/USB/: CMakeLists.txt  USB.camkes
camkes-components/drivers/USB/src/: usb.c
camkes-components/interfaces/: Init.idl4
docs/: ARCHITECTURE.md  TESTING.md  THREAT_MODEL.md
